src/objects/Product_Portfolio_Item__c.object
<CustomObject>
    <fields>
        <fullName>ActionType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ActionType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternateCode2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AlternateCode2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlternateCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AlternateCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CH Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CareActivate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CareActivate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CareException__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CareException</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CareSelect__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CareSelect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CdbStatus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CdbStatus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComponentStatus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ComponentStatus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataUsage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DataUsage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP_ActiveStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDP_ActiveStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDP_LastModifiedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EDP_LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IbaseStatus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IbaseStatus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Implement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ItemId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ItemId</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemUsage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ItemUsage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastUpdate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LastUpdate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lifecyclestatus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lifecyclestatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimitingRouting__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LimitingRouting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintain__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Maintain</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_Marketing_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Marketing Text</label>
        <length>4000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NCP_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCP_Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NSNAbbreviation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNAbbreviation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNAdditionalClassification__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNAdditionalClassification</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNAliasName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNAliasName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNCloud__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNCloud</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>NSNCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNDesignResponsibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNDesignResponsibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNDesignType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNDesignType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNLegacyCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>NSNLegacyCode</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NSNLegacyNcmCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNLegacyNcmCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNLegacyRevision__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNLegacyRevision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNMaximumOla__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNMaximumOla</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNMutivendorOwner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNMutivendorOwner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNNameInCustomerNetwork__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNNameInCustomerNetwork</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NSNOfficialProductName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNOfficialProductName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNOriginalOwnerGroup__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNOriginalOwnerGroup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNPartner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNPartner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNPlatform__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNPlatform</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNPortfolioClassification__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNPortfolioClassification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNPortfolioDataSpecialist__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNPortfolioDataSpecialist</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNProductHierarchy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNProductHierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNProductManager__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNProductManager</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NSNScope__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNScope</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNSummary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNSummary</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NSNTargetNeType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNTargetNeType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNThirdPartyOwner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNThirdPartyOwner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNVirtualization__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNVirtualization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NctStatus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NctStatus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Obsolete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Obsolete</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDMModified__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDMModified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PDMTimestamp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDMTimestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rampdown__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rampdown</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rejected</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechCluster__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TechCluster</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Product Portfolio Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NSNLegacyCode__c</columns>
        <columns>Lifecyclestatus__c</columns>
        <columns>Description__c</columns>
        <columns>NSNPortfolioClassification__c</columns>
        <columns>CH_Processed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Portfolio Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Portfolio Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>